<resources>
    <string name="app_name">Dietanabol</string>
    <string name="action_settings">Ustawienia</string>

    <string name="diet">Dieta</string>
    <string name="shopping">Zakupy</string>
    <string name="notifications">Powiadomienia</string>
    <string name="products">Produkty</string>

    <string name="days_prompt">Zmień dzień tygodnia</string>
    <string name="add_meal">Dodaj posiłek</string>
    <string name="delete_meal">Usuń posiłek</string>


    <string-array name="days">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>


    <string name="add_product">Dodaj produkt</string>
    <string name="delete_products">Usuń produkty</string>
    <string name="product_name">Nazwa produktu:</string>
    <string name="grams_or_pieces">Ilość gramy/sztuki:</string>
    <string name="is_regularly_purchased">Czy jest regularnie kupowany?</string>
    <string name="grams">g</string>
    <string name="pieces">szt.</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="product_ID">Nr</string>
    <string name="product_grams_or_pieces">g/szt.</string>
    <string name="product_is_regularly_purchased">Czy reg.?</string>
    <string name="product_quantity">Ilość:</string>
    <string name="lack_of_product">Wprowadź produkt przed zapisaniem.</string>
    <string name="exit_without_saving">Czy na pewno chcesz wyjść? Wprowadzone zmiany nie zostaną zapisane.</string>
    <string name="i_want_to_exit">Chcę wyjść</string>
    <string name="i_want_to_stay">Zostaję</string>

    <string name="title_activity_diet">Dieta</string>
    <string name="title_activity_shopping">Zakupy</string>
    <string name="title_activity_products">Produkty</string>
    <string name="title_activity_add_product">Dodawanie produktu</string>
    <string name="title_activity_add_meal">Dodawanie posiłku</string>
    <string name="day_of_the_week">Dzień tygodnia:</string>
    <string name="hour">Godzina:</string>
    <string name="type_of_meal">Rodzaj posiłku:</string>
    <string name="ingredient">Składnik:</string>
    <string name="add_next_ingredient">Dodaj kolejny składnik</string>
    <string name="preview">Podgląd:</string>
    <string name="lack_of_meal">Wprowadź poprawnie posiłek przed zapisaniem.</string>
    <string name="lack_of_quantity_and_hour">Uzupełnij aktualny posiłek przed dodaniem kolejnego.</string>
    <string name="product_to_delete">Który produkt chcesz usunąć?</string>
    <string name="cancel">Anuluj</string>
    <string name="are_you_sure_you_want_to_delete_chosen_products">Czy na pewno chcesz usunąć wybrane produkty? Wiąże się to z usunięciem wszystkich posiłków zawierających usunięty produkt.</string>
    <string name="delete_and_save">Usuń i zapisz</string>
    <string name="quantity_greater_than_zero">Wprowadź liczbę większą od zera.</string>
    <string name="exit_because_there_is_no_product">Nie posiadasz żadnych produktów. Wprowadź nowy produkt w zakładce PRODUKTY przed utworzeniem nowego posiłku.</string>
    <string name="OK">OK</string>
    <string name="click_to_input_an_hour">Kliknij przycisk poniżej by wprowadzić godzinę.</string>
    <string name="select_time">Wybierz godzinę</string>
    <string name="set_an_hour">Wybierz godzinę</string>
    <string name="meal_to_delete">Który posiłek chcesz usunąć?</string>
    <string name="end_shopping">Zakończ zakupy</string>
    <string name="go_for_new_shopping">Nowe zakupy</string>
    <string name="go_finish_the_last_shopping">Dokończ ostatnie zakupy</string>
    <string name="exit_because_there_is_no_product_which_is_regularly_purchased">Nie posiadasz żadnych produktów, które są regularnie kupowane i używane w diecie. Wprowadź nowy produkt w zakładce PRODUKTY przed zrobieniem zakupów. Jeśli masz taki produkt, stwórz z niego nowy posiłek w zakładce DIETA.</string>
    <string name="product_name_is_not_unique">Masz już produkt o takiej nazwie.</string>
    <string name="meal_hour_is_not_unique">Masz już posiłek tego dnia, o tej godzinie.</string>
    <string name="regularly_purchased">Produkt regularnie kupowany</string>
    <string name="is_not_regularly_purchased">Produkt nie regularnie kupowany</string>

    <string-array name="types_of_meal">
        <item>Śniadanie</item>
        <item>Lunch</item>
        <item>Obiad</item>
        <item>Poobiadowy</item>
        <item>Przedtreningowy</item>
        <item>Potreningowy</item>
        <item>Kolacja</item>
    </string-array>
    <string name="title_activity_notifications">Powiadomienia</string>
    <string name="turn_on_notifications">Włącz powiadomienia</string>
    <string name="add_new_notification">Dodaj powiadomienie</string>
    <string name="delete_notifications">Usuń powiadomienia</string>
    <string name="title_activity_add_notification">AddNotificationActivity</string>
    <string name="notify_title">Tytuł powiadomienia</string>
    <string name="lack_of_notification">Wprowadź poprawnie powiadomienie przed zapisaniem.</string>
    <string name="app_info">Aplikacja ma pomóc w utrzymaniu diety. W zakładce PRODUKTY tworzymy produkty z których budujemy
        posiłki w zakładce DIETA. Aplikacja na podstawie posiłków automatycznie generuje listę zakupów. W zakładce POWIADOMIENIA
        możemy stworzyć własne powiadomienia takie jak przypomnienie o ugotowaniu posiłku. Pod powyższym menu jest napisany aktualny
        układ rąk w danym tygodniu dotyczący niektórych ćwiczeń na siłowni.</string>
    <string name="position_of_hands">Pozycja rąk:</string>
    <string name="reverse_close_grip">podchwyt / nachwyt</string>
    <string name="close_reverse_grip">nachwyt / podchwyt</string>

</resources>
