<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rxrt8.dietanabol.AddNotificationActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_add_notification">


    <EditText
        android:id="@+id/notificationTitleET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentStart="true"
        android:hint="@string/notify_title" />

    <TextView
        android:id="@+id/dayNotifyHintTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_prompt"
        android:layout_marginTop="@dimen/margin_bigger"
        android:layout_below="@+id/notificationTitleET" />

    <Spinner
        android:id="@+id/dayNotifySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dayNotifyHintTV"
        android:entries="@array/days"
        android:layout_marginTop="@dimen/margin_smaller" />



    <TextView
        android:id="@+id/hourTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_bigger"
        android:layout_below="@+id/dayNotifySpinner"
        android:text="@string/hour" />

    <TextView
        android:id="@+id/hourHintTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_smaller"
        android:ems="10"
        android:layout_below="@+id/hourTV"
        android:hint="@string/click_to_input_an_hour" />

    <Button
        android:id="@+id/hourButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_smaller"
        android:onClick="setAnHour"
        android:layout_below="@+id/hourHintTV"
        android:text="@string/set_an_hour" />

</RelativeLayout>
