<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rxrt8.dietanabol.MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diet"
        android:id="@+id/dietBtn"
        android:onClick="click"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping"
        android:id="@+id/shoppingBtn"
        android:onClick="click"
        android:layout_below="@+id/dietBtn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_bigger" />



    <Button
        android:id="@+id/notificationsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shoppingBtn"
        android:layout_marginTop="@dimen/margin_bigger"
        android:text="@string/notifications"
        android:onClick="click"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/productsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/notificationsBtn"
        android:layout_marginTop="@dimen/margin_bigger"
        android:text="@string/products"
        android:onClick="click"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
