<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rxrt8.dietanabol.AddMealActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_add_meal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dayOfTheWeekTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/day_of_the_week" />

            <Spinner
                android:id="@+id/dietSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dayOfTheWeekTV"
                android:layout_marginTop="10dp"
                android:entries="@array/days" />

            <TextView
                android:id="@+id/hourTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dietSpinner"
                android:layout_marginTop="15dp"
                android:text="@string/hour" />

            <EditText
                android:id="@+id/timeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/hourTV"
                android:ems="10"
                android:inputType="time" />

            <TextView
                android:id="@+id/typeOfMealTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/timeET"
                android:layout_marginTop="15dp"
                android:text="@string/type_of_meal" />

            <Spinner
                android:id="@+id/typeOfMealSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/typeOfMealTV"
                android:layout_marginTop="10dp"
                android:entries="@array/types_of_meal" />

            <TextView
                android:id="@+id/ingredientTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/typeOfMealSpinner"
                android:layout_marginTop="15dp"
                android:text="@string/ingredient" />

            <Spinner
                android:id="@+id/ingredientSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ingredientTV"
                android:layout_marginTop="10dp"
                android:entries="@array/days" />

            <Switch
                android:id="@+id/gramsOrPiecesSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ingredientSpinner"
                android:layout_marginTop="15dp"
                android:text="@string/grams_or_pieces"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:id="@+id/quantityTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/gramsOrPiecesSwitch"
                android:layout_marginTop="15dp"
                android:text="@string/product_quantity" />

            <EditText
                android:id="@+id/quantityET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gramsOrPiecesSwitch"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/quantityTV"
                android:ems="10"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/quantityTV"
                android:layout_marginTop="15dp"
                android:text="@string/add_next_ingredient" />

            <TextView
                android:id="@+id/previewTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button"
                android:layout_marginTop="15dp"
                android:text="@string/preview" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
