<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rxrt8.dietanabol.ShoppingActivity"
    tools:showIn="@layout/activity_shopping"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/goForNewShoppingBtn"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        android:layout_alignParentStart="true"
        android:text="@string/go_for_new_shopping" />


    <Button
        android:id="@+id/goFinishTheLastShoppingBtn"
        android:textColor="@color/colorPrimaryText"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/go_finish_the_last_shopping" />

    <Button
        android:id="@+id/endShoppingBtn"
        android:layout_width="@dimen/button_width"
        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/end_shopping"
         />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_bigger"
        android:textColor="@color/colorPrimaryText"
        android:layout_below="@+id/endShoppingBtn"
        android:id="@+id/productsLV" />

</RelativeLayout>
