<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rxrt8.dietanabol.AddProductActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_add_product">


    <TextView
        android:id="@+id/productNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryText"/>

    <Switch
        android:id="@+id/gramsOrPiecesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/productNameTV"
        android:layout_marginTop="15dp"
        android:text="@string/grams_or_pieces"
        android:textColor="@color/colorPrimaryText"/>

    <Switch
        android:id="@+id/isRegularlyPurchasedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gramsOrPiecesSwitch"
        android:layout_marginTop="15dp"
        android:text="@string/is_regularly_purchased"
        android:textColor="@color/colorPrimaryText"/>

    <EditText
        android:id="@+id/productNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="13dp"
        android:layout_alignBaseline="@+id/productNameTV"
        android:layout_alignBottom="@+id/productNameTV"
        android:layout_toEndOf="@+id/productNameTV" />


</RelativeLayout>
