<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rxrt8.dietanabol.DietActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_diet">

    <TextView
        android:id="@+id/dietTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_prompt"
        android:layout_alignParentTop="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:id="@+id/dietSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dietTV"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:entries="@array/days"
        />

    <Button
        android:id="@+id/addMealBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dietSpinner"
        android:layout_marginTop="15dp"
        android:onClick="click"
        android:text="@string/add_meal" />

    <Button
        android:id="@+id/deleteMealBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/dietSpinner"
        android:layout_marginTop="15dp"
        android:text="@string/delete_meal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addMealBtn"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</RelativeLayout>
